<resources>
    <string name="app_name">시목록</string>

    <string name="title01">별 헤는 밤</string>
    <string name="author01">윤동주</string>
  <string name="background01">starts</string>
    <string name="body01">
        계절이 지나가는 하늘에는
        가을로 가득 차있습니다
        나는 아무 걱정도 없이
        가을 속의 별들을 다 헤일듯합니다
    </string>
    <string name="sub_body01">
계절이 지나가는 하늘에는\n
가을로 가득 차 있습니다.\n\n

나는 아무 걱정도 없이\n
가을 속 별들을 다 헤일 듯 합니다.\n\n

가슴속에 하나 둘 새겨지는 별을\n
이제 다 못헤는 것은\n
쉬이 아침이 오는 까닭이오\n
내일 밤이 남은 까닭이오\n
아직 나의 청춘이 다하지 않은 까닭입니다.\n\n

별 하나에 추억과\n
별 하나에 사랑과\n
별 하나에 쓸쓸함과\n
별 하나에 동경과\n
별 하나에 시와\n
별 하나에 어머니, 어머니\n\n

어머님, 나는 별 하나에 아름다운 말 한마디씩 불러봅니다\n
소학교 때 책상을 같이 했던 아이들의 이름과 패,경,목 이런\n
이국 소녀들의 이름과 벌써 아기 어머니된 계집애들의 이름과\n\n

가난한 이웃 사람들의 이름과 비둘기 강아지 토끼 노새 노루\n
\'프랑시스 잠\'\'라이너 마리아 릴케\'이런 시인의 이름을 불러 봅니다\n\n

이네들은 너무나 멀리 있습니다\n
별이 아스라이 멀듯이\n\n

어머님\n
그리고 당신은 멀리 북간도에 계십니다\n\n

나는 무엇인지 그리워서\n
이 많은 별빛이 내린 언덕 위에\n
내 이름자를 써보고, 흙으로 덮어 버리었습니다\n\n

딴은 밤을 새워 우는 벌레를\n
부끄러운 이름을 슬퍼하는 까닭입니다\n\n

그러나 겨울이 지나고 나의 별에도 봄이 오면\n
무덤 우에 파란 잔디가 피어나듯이\n
내 이름자 묻힌 언덕 우에도\n
자랑처럼 풀이 무성할 게외다\n

    </string>
    <string name="title02">가지 않은 길</string>
    <string name="author02">로버트 프로스트</string>
    <string name="background02">road</string>
    <string name="body02">
        단풍 든 숲 속에 두 갈래 길이 있었습니다
        한 몸이 두 길을 가지 못하기에
        탄식하며 한참을 서서
        낮은 수풀로 꺾여 내려가는 길을
        멀리 바라보았습니다
    </string>
    <string name="a">시목록 첫번째 예제</string>
    <string name="b">시목록 두번째 예제</string>
    <string name="c">시목록 세번째 예제</string>
    <string name="sub_body02">
        노란 숲 속 두 갈래로 길이 나 있었습니다.\n
        두 길 다 가보지 못하는 것이 안타까워,\n
        한동안 나그네로 서서\n
        한쪽 깊이 굽어 꺾여 내려한 곳으로\n
        눈이 닿는 데까지 멀리 바라보았습니다.\n\n

        그러고는 똑같이 아름다운 쪽 길을 택했습니다.\n
        이 길은 풀이 더 우거지고 발자취도 적어,\n
        누군가 더 걸어가야 할 길처럼 보였기 때문입니다.\n
        누군가 이 길을 걷는다면,\n
        다른 쪽 길과 거의 같아질 것이지만요.\n\n

        그 날 아침 두 갈래 길에는 똑같이\n
        밟은 흔적이 없는 낙엽이 쌓여 있었습니다.\n
        아, 나는 다음 날을 위하여 한쪽 길을 남겨두었습니다.\n
        하지만 길은 길로 이어지는 것이어서\n
        다시 돌아올 수 없는 법.\n\n

        먼 훗날 어디에선가\n
        나는 한숨을 쉬며 말할 것입니다.\n
        숲 속에 두 갈래 길이 있었는데,\n
        나는 사람이 적게 간 길을 택했노라고,\n
        그래서 모든 것이 달라졌다고.\n
    </string>
</resources>
