<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizental_margin"
    android:paddingRight="@dimen/activity_horizental_margin"
    tools:context="kr.or.dgit.example2_01.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title01"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#61380B"
        android:background="#3061380B"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author01"
        android:textSize="15sp"
        android:textColor="#22741C"/>

    <TextView
        android:id="@+id/tv_marqee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body01"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title02"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#61380B"
        android:background="#3061380B"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author02"
        android:textSize="15sp"
        android:textColor="#22741C"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/body02"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="15sp"/>

</LinearLayout>