<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.or.dgit.example2_01.Ex01">
<Button
    android:id="@+id/btnMain01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/a"
    android:onClick="mOnClicked"/>
    <Button
    android:id="@+id/btnMain02"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/b"
    android:onClick="mOnClicked"/>
    <Button
        android:id="@+id/btnMain03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:onClick="mOnClicked"/>
</LinearLayout>

