<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizental_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.or.dgit.example2_01.Ex03">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/poem01"
        android:tag="01"
        android:clickable="true"
        android:onClick="displayPoem"
        android:background="@drawable/shape_list"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title01"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#61380B"
            android:background="@drawable/shape_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author01"
            android:textSize="15sp"
            android:textColor="#22741C"/>

        <TextView
            android:id="@+id/tv_marqee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body01"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/poem02"
        android:tag="02"
        android:clickable="true"
        android:onClick="displayPoem"
        android:background="@drawable/shape_list"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title02"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#61380B"
            android:background="@drawable/shape_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author02"
            android:textSize="15sp"
            android:textColor="#22741C"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body02"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="15sp"/>

    </LinearLayout>
</LinearLayout>
